--- a/perfil_seguimientos2.html
+++ b/perfil_seguimientos2.html
@@ -109,69 +109,110 @@
                                 <h3>Viñetas de gente a la que sigues <span class="badge">3</span></h3>
                                 <hr>
                                 <div class="container-fluid">
-                                    <div class="jumbotron">
-                                        <p>Autor: <small><a href="#">Pepito95</a></small></p>
-                                        <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta1.jpg">
-                                        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                                        <p> </p>
-                                        <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a> / <a href="details2.html">Detalles</a></small></div>
-                                        <div id="social" class="row">
-                                            <hr>
-                                            <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
-                                            <a href="details2.html">
-                                                <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
-                                            </a>
-                                            <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
-                                                <div class="badge">30</div>
-                                            </button>
-                                            <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
-                                                <div class="badge">5</div>
-                                            </button>
-                                            <br>
-                                            <br> </div>
+                                    <div class="col-md-9">
+                                        <div class="jumbotron">
+                                            <p>Autor: <small><a href="#">Pepito95</a></small></p>
+                                            <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/imgres.jpg">
+                                            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                                            <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a></small></div>
+                                            <div id="social" class="row">
+                                                <hr>
+                                                <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                                                <a href="details2.html">
+                                                    <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
+                                                </a>
+                                                <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
+                                                    <div class="badge">30</div>
+                                                </button>
+                                                <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
+                                                    <div class="badge">5</div>
+                                                </button>
+                                                <br>
+                                                <br> </div>
+                                        </div>
+                                        <div class="jumbotron">
+                                            <p>Autor: <small><a href="#">Pepito95</a></small></p>
+                                            <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta1.jpg">
+                                            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                                            <p> </p>
+                                            <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a></small></div>
+                                            <div id="social" class="row">
+                                                <hr>
+                                                <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                                                <a href="details2.html">
+                                                    <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
+                                                </a>
+                                                <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
+                                                    <div class="badge">30</div>
+                                                </button>
+                                                <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
+                                                    <div class="badge">5</div>
+                                                </button>
+                                                <br>
+                                                <br> </div>
+                                        </div>
+                                        <div class="jumbotron">
+                                            <p>Autor: <small><a href="#">Pepito95</a></small></p>
+                                            <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta2.jpg">
+                                            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                                            <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a></small></div>
+                                            <div id="social" class="row">
+                                                <hr>
+                                                <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                                                <a href="details2.html">
+                                                    <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
+                                                </a>
+                                                <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
+                                                    <div class="badge">30</div>
+                                                </button>
+                                                <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
+                                                    <div class="badge">5</div>
+                                                </button>
+                                                <br>
+                                                <br> </div>
+                                        </div>
+                                        <div class="jumbotron">
+                                            <p>Autor: <small><a href="#">Pepito95</a></small></p>
+                                            <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta3.jpg">
+                                            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                                            <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a></small></div>
+                                            <div id="social" class="row">
+                                                <hr>
+                                                <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                                                <a href="details2.html">
+                                                    <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
+                                                </a>
+                                                <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
+                                                    <div class="badge">30</div>
+                                                </button>
+                                                <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
+                                                    <div class="badge">5</div>
+                                                </button>
+                                                <br>
+                                                <br> </div>
+                                        </div>
+                                        <div class="jumbotron">
+                                            <p>Autor: <small><a href="#">Pepito95</a></small></p>
+                                            <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta4.jpg">
+                                            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                                            <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a></small></div>
+                                            <div id="social" class="row">
+                                                <hr>
+                                                <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                                                <a href="details2.html">
+                                                    <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
+                                                </a>
+                                                <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
+                                                    <div class="badge">30</div>
+                                                </button>
+                                                <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
+                                                    <div class="badge">5</div>
+                                                </button>
+                                                <br>
+                                                <br> </div>
+                                        </div>
                                     </div>
-                                    <div class="jumbotron">
-                                        <p>Autor: <small><a href="#">Pepito95</a></small></p>
-                                        <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta1.jpg">
-                                        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                                        <p> </p>
-                                        <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a> / <a href="details2.html">Detalles</a></small></div>
-                                        <div id="social" class="row">
-                                            <hr>
-                                            <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
-                                            <a href="details2.html">
-                                                <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
-                                            </a>
-                                            <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
-                                                <div class="badge">30</div>
-                                            </button>
-                                            <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
-                                                <div class="badge">5</div>
-                                            </button>
-                                            <br>
-                                            <br> </div>
-                                    </div>
-                                    <div class="jumbotron">
-                                        <p>Autor: <small><a href="#">Pepito95</a></small></p>
-                                        <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta1.jpg">
-                                        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                                        <p> </p>
-                                        <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a> / <a href="details2.html">Detalles</a></small></div>
-                                        <div id="social" class="row">
-                                            <hr>
-                                            <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
-                                            <a href="details2.html">
-                                                <button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button>
-                                            </a>
-                                            <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
-                                                <div class="badge">30</div>
-                                            </button>
-                                            <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
-                                                <div class="badge">5</div>
-                                            </button>
-                                            <br>
-                                            <br> </div>
-                                    </div>
+                                    <div class="col-md-3"></div>
                                 </div>
                             </div>
                         </div>
