--- a/index.html
+++ b/index.html
@@ -23,13 +23,87 @@
 <body>
     <div id="wrapper">
         <!-- Navigation -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+                <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="index.html">¡CuantoMeme!</a> </div>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> 
+                <a class="navbar-brand" href="index.html"></a> 
+                </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
-                <li> <a id="btn-login" class="btn btn-sm btn-primary"><span class="fa fa-user fa-1x"></span> Identificate</a> </li>
+                <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
+                    <ul class="dropdown-menu message-dropdown">
+                        <li class="message-preview">
+                            <a href="#">
+                                <div class="media"> <span class="pull-left">
+                                        <img class="media-object" src="http://placehold.it/50x50" alt="">
+                                    </span>
+                                    <div class="media-body">
+                                        <h5 class="media-heading">
+                                            <strong>John Smith</strong>
+                                        </h5>
+                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="message-preview">
+                            <a href="#">
+                                <div class="media"> <span class="pull-left">
+                                        <img class="media-object" src="http://placehold.it/50x50" alt="">
+                                    </span>
+                                    <div class="media-body">
+                                        <h5 class="media-heading">
+                                            <strong>John Smith</strong>
+                                        </h5>
+                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="message-preview">
+                            <a href="#">
+                                <div class="media"> <span class="pull-left">
+                                        <img class="media-object" src="http://placehold.it/50x50" alt="">
+                                    </span>
+                                    <div class="media-body">
+                                        <h5 class="media-heading">
+                                            <strong>John Smith</strong>
+                                        </h5>
+                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
+                                        <p>Lorem ipsum dolor sit amet, consectetur...</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="message-footer"> <a href="#">Read All New Messages</a> </li>
+                    </ul>
+                </li>
+                <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
+                    <ul class="dropdown-menu alert-dropdown">
+                        <li> <a href="#">Alert Name <span class="label label-default">Alert Badge</span></a> </li>
+                        <li> <a href="#">Alert Name <span class="label label-primary">Alert Badge</span></a> </li>
+                        <li> <a href="#">Alert Name <span class="label label-success">Alert Badge</span></a> </li>
+                        <li> <a href="#">Alert Name <span class="label label-info">Alert Badge</span></a> </li>
+                        <li> <a href="#">Alert Name <span class="label label-warning">Alert Badge</span></a> </li>
+                        <li> <a href="#">Alert Name <span class="label label-danger">Alert Badge</span></a> </li>
+                        <li class="divider"></li>
+                        <li> <a href="#">View All</a> </li>
+                    </ul>
+                </li>
+                <li id="user-info" class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" id="nickname"><i class="fa fa-user"></i><b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li> <a><i class="fa fa-fw fa-user"></i> Profile</a> </li>
+                        <li> <a><i class="fa fa-fw fa-envelope"></i> Inbox</a> </li>
+                        <li> <a><i class="fa fa-fw fa-gear"></i> Settings</a> </li>
+                        <li class="divider"></li>
+                        <li> <a id="btn-logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a> </li>
+                    </ul>
+                </li>
+                <li> <a id="btn-login" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-user"></span> Identificate</a> </li>
+
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -65,8 +139,8 @@
                 <hr>
                 <div class="jumbotron">
                     <p>Autor: <small><a href="#">Pepito95</a></small></p>
-                    <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/imgres.jpg">
-                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                    <h1>Sí, sí , veterinario.</h1> <img class="img-responsive" src="../img/vinetas/vineta5.png">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at metus in nibh congue ultrices nec a magna. Etiam sit amet erat pulvinar est rutrum maximus. Nulla cursus velit faucibus hendrerit aliquam. Nulla fermentum vestibulum nulla, non suscipit felis. Vivamus ac ante ac urna porttitor elementum. Praesent in interdum tellus, et ullamcorper ex. Integer blandit, ligula sed iaculis commodo, purus dolor semper leo, a luctus mauris nulla et nisl. Donec tincidunt convallis sapien, non efficitur turpis finibus et. Donec ut semper mi, quis tempor elit. Aliquam dignissim massa id risus mattis fringilla.</p>
                     <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a></small></div>
                     <div id="social" class="row">
                         <hr>
@@ -83,8 +157,8 @@
                 </div>
                 <div class="jumbotron">
                     <p>Autor: <small><a href="#">Pepito95</a></small></p>
-                    <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta1.jpg">
-                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                    <h1>True story :-(</h1> <img class="img-responsive" src="../img/vinetas/vineta1.jpg">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at metus in nibh congue ultrices nec a magna. Etiam sit amet erat pulvinar est rutrum maximus. Nulla cursus velit faucibus hendrerit aliquam. Nulla fermentum vestibulum nulla, non suscipit felis. Vivamus ac ante ac urna porttitor elementum. Praesent in interdum tellus, et ullamcorper ex. Integer blandit, ligula sed iaculis commodo, purus dolor semper leo, a luctus mauris nulla et nisl. Donec tincidunt convallis sapien, non efficitur turpis finibus et. Donec ut semper mi, quis tempor elit. Aliquam dignissim massa id risus mattis fringilla..</p>
                     <p> </p>
                     <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a> / <a href="details2.html">Detalles</a></small></div>
                     <div id="social" class="row">
@@ -102,8 +176,8 @@
                 </div>
                 <div class="jumbotron">
                     <p>Autor: <small><a href="#">Pepito95</a></small></p>
-                    <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta2.jpg">
-                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                    <h1>Mañana se me pasa!</h1> <img class="img-responsive" src="../img/vinetas/vineta2.jpg">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at metus in nibh congue ultrices nec a magna. Etiam sit amet erat pulvinar est rutrum maximus. Nulla cursus velit faucibus hendrerit aliquam. Nulla fermentum vestibulum nulla, non suscipit felis. Vivamus ac ante ac urna porttitor elementum. Praesent in interdum tellus, et ullamcorper ex. Integer blandit, ligula sed iaculis commodo, purus dolor semper leo, a luctus mauris nulla et nisl. Donec tincidunt convallis sapien, non efficitur turpis finibus et. Donec ut semper mi, quis tempor elit. Aliquam dignissim massa id risus mattis fringilla..</p>
                     <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a></small></div>
                     <div id="social" class="row">
                         <hr>
@@ -120,8 +194,8 @@
                 </div>
                 <div class="jumbotron">
                     <p>Autor: <small><a href="#">Pepito95</a></small></p>
-                    <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta3.jpg">
-                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                    <h1>Vida injusta...Siempre igual.</h1> <img class="img-responsive" src="../img/vinetas/vineta3.jpg">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at metus in nibh congue ultrices nec a magna. Etiam sit amet erat pulvinar est rutrum maximus. Nulla cursus velit faucibus hendrerit aliquam. Nulla fermentum vestibulum nulla, non suscipit felis. Vivamus ac ante ac urna porttitor elementum. Praesent in interdum tellus, et ullamcorper ex. Integer blandit, ligula sed iaculis commodo, purus dolor semper leo, a luctus mauris nulla et nisl. Donec tincidunt convallis sapien, non efficitur turpis finibus et. Donec ut semper mi, quis tempor elit. Aliquam dignissim massa id risus mattis fringilla..</p>
                     <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a></small></div>
                     <div id="social" class="row">
                         <hr>
@@ -138,8 +212,26 @@
                 </div>
                 <div class="jumbotron">
                     <p>Autor: <small><a href="#">Pepito95</a></small></p>
-                    <h1>Hello, world!</h1> <img class="img-responsive" src="../img/vinetas/vineta4.jpg">
-                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                    <h1>Si es gratis, ádios miedo!</h1> <img class="img-responsive" src="../img/vinetas/vineta4.jpg">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at metus in nibh congue ultrices nec a magna. Etiam sit amet erat pulvinar est rutrum maximus. Nulla cursus velit faucibus hendrerit aliquam. Nulla fermentum vestibulum nulla, non suscipit felis. Vivamus ac ante ac urna porttitor elementum. Praesent in interdum tellus, et ullamcorper ex. Integer blandit, ligula sed iaculis commodo, purus dolor semper leo, a luctus mauris nulla et nisl. Donec tincidunt convallis sapien, non efficitur turpis finibus et. Donec ut semper mi, quis tempor elit. Aliquam dignissim massa id risus mattis fringilla..</p>
+                    <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a></small></div>
+                    <div id="social" class="row">
+                        <hr>
+                        <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                        <a href="details2.html"><button type="button" class="btn btn-info btn-circle btn-lg"><i class="fa fa-comments"></i> <span class="badge">3</span></button></a>
+                        <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i>
+                            <div class="badge">30</div>
+                        </button>
+                        <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
+                            <div class="badge">5</div>
+                        </button>
+                        <br>
+                        <br> </div>
+                </div>
+                                <div class="jumbotron">
+                    <p>Autor: <small><a href="#">Pepito95</a></small></p>
+                    <h1>Hijos troll...</h1> <img class="img-responsive" src="../img/vinetas/vineta6.jpg">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed at metus in nibh congue ultrices nec a magna. Etiam sit amet erat pulvinar est rutrum maximus. Nulla cursus velit faucibus hendrerit aliquam. Nulla fermentum vestibulum nulla, non suscipit felis. Vivamus ac ante ac urna porttitor elementum. Praesent in interdum tellus, et ullamcorper ex. Integer blandit, ligula sed iaculis commodo, purus dolor semper leo, a luctus mauris nulla et nisl. Donec tincidunt convallis sapien, non efficitur turpis finibus et. Donec ut semper mi, quis tempor elit. Aliquam dignissim massa id risus mattis fringilla..</p>
                     <div id="categoria" class=""><small>Categoria: <a href="#">LOL</a></small></div>
                     <div id="social" class="row">
                         <hr>
